--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-yuidoc": "^0.5.2",
     "grunt-mocha": "~0.4.10",
     "grunt-usemin": "~2.1.0",
     "jshint-stylish": "~0.1.5",
