--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "grunt": "~0.4.1",
     "grunt-bower-install": "~1.0.0",
     "grunt-browserify": "^3.2.0",
-    "grunt-chrome-manifest": "~0.2.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.9.1",
@@ -24,10 +23,12 @@
     "grunt-mocha": "~0.4.10",
     "grunt-usemin": "~2.1.0",
     "jshint-stylish": "~0.1.5",
+    "jss": "^0.2.10",
     "load-grunt-tasks": "~0.4.0",
     "minifyify": "^4.4.0",
     "remapify": "^1.3.0",
-    "time-grunt": "~0.3.1"
+    "time-grunt": "~0.3.1",
+    "tinycolor2": "^1.0.0"
   },
   "engines": {
     "node": ">=0.8.0"
