--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-yuidoc": "^0.5.2",
     "grunt-mocha": "~0.4.10",
+    "grunt-template": "^0.2.3",
     "grunt-usemin": "~2.1.0",
     "jshint-stylish": "~0.1.5",
     "jss": "^0.2.10",
