--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "minifyify": "^4.4.0",
     "remapify": "^1.3.0",
     "time-grunt": "~0.3.1",
-    "tinycolor2": "^1.0.0"
+    "tinycolor2": "^1.0.0",
+    "vue": "git://github.com/yyx990803/vue.git#a1b8b24e86e453703d4684db9f8159224aa42fed"
   },
   "engines": {
     "node": ">=0.8.0"
