--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-template": "^0.2.3",
     "grunt-usemin": "~2.1.0",
     "jshint-stylish": "~0.1.5",
-    "jss": "^0.2.10",
+    "jss": "^0.8.1",
+    "jss-nested": "^0.1.4",
     "load-grunt-tasks": "~0.4.0",
     "minifyify": "^4.4.0",
     "remapify": "^1.3.0",
