--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "jss-nested": "^0.1.4",
     "load-grunt-tasks": "~0.4.0",
     "minifyify": "^4.4.0",
+    "partialify": "^3.1.1",
     "remapify": "^1.3.0",
+    "sortablejs": "git://github.com/RubaXa/Sortable.git#532eea374aeab5b3e1b0cdea71381474f57349c6",
     "time-grunt": "~0.3.1",
     "tinycolor2": "^1.0.0",
-    "vue": "git://github.com/yyx990803/vue.git#a1b8b24e86e453703d4684db9f8159224aa42fed"
+    "vue": "git://github.com/yyx990803/vue.git#8acdea3532175a2e523b365b435b354728f764e6"
   },
   "engines": {
     "node": ">=0.8.0"
