--- a/app/manifest.json
+++ b/app/manifest.json
@@ -7,6 +7,10 @@
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
+  "background": {
+    "scripts": ["scripts/background.js"],
+    "persistent": false
+  },
   "default_locale": "en",
   "minimum_chrome_version": "32",
   "options_page": "options.html",
