--- a/package.json
+++ b/package.json
@@ -7,22 +7,17 @@
     "grunt": "~0.4.1",
     "grunt-bower-install": "~1.0.0",
     "grunt-browserify": "^3.2.0",
-    "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.9.1",
-    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-imagemin": "~0.7.1",
     "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-yuidoc": "^0.5.2",
-    "grunt-mocha": "~0.4.10",
     "grunt-template": "^0.2.3",
-    "grunt-usemin": "~2.1.0",
     "jshint-stylish": "~0.1.5",
     "jss": "^0.8.1",
     "jss-nested": "^0.1.4",
@@ -34,8 +29,7 @@
     "sortablejs": "git://github.com/RubaXa/Sortable.git#532eea374aeab5b3e1b0cdea71381474f57349c6",
     "time-grunt": "~0.3.1",
     "tinycolor2": "^1.0.0",
-    "vue": "git://github.com/yyx990803/vue.git#8acdea3532175a2e523b365b435b354728f764e6",
-    "yuidoc-bootstrap-theme": "^1.0.4"
+    "vue": "git://github.com/yyx990803/vue.git#8acdea3532175a2e523b365b435b354728f764e6"
   },
   "scripts": {
     "install": "napa bsbeeks/yuidoc-clean-theme"
