--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "technicolor-timesheet",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
     "browserify": "^6.3.2",
     "grunt": "~0.4.1",
     "grunt-bower-install": "~1.0.0",
     "grunt-browserify": "^3.2.0",
+    "grunt-bump": "0.0.16",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.9.1",
     "grunt-contrib-connect": "~0.7.1",
